<resources>
    <string name="app_name">GetProfessional</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="contact_us">ContactUs</string>
    <string name="number_text">Number</string>
    <string name="number_value">+91 7796220662</string>
    <string name="email_text">Email</string>
    <string name="email_value">support@GetProfessional.in</string>
    <string name="website_text">Website</string>
    <string name="website_value">
        <a href="http://www.getprofessional.in">GetProfessional.in</a>
    </string>
    <string name="app_font">sans-serif-smallcaps</string>
    <string name="about_us_text">GetProfessional.in has been delivering results since we opened. Our goal is to provide both a superior customer experience and tremendous value for our customers.
We provide you all types of home service related to your Laptop/PC. We are the only one in Aurangabad who provide a home service for your laptop and computer at lowest rate,
We love our customers and welcome your feedback and suggestions. Use our Contact Us page to tell us what we’re doing right or what we can improve on.</string>
    <string name="order_history_text">Order History</string>

    <string name="laptop_serving_title">Laptop Servicing :-</string>
    <string name="ls_price">Price: 350/-</string>
    <string name="laptop_basic_repairing_title">Laptop Basic Repairing</string>
    <string name="lbr_price">Price: 450/-</string>
    <string name="laptop_major_repairing_title">Laptop Major Repairing</string>
    <string name="lmr_price">Price: 550/-</string>
    <string name="computer_servicing_title">Computer Servicing</string>
    <string name="cs_price">Price: 250/-</string>
    <string name="computer_basic_servicing_title">Computer Basic Repairing</string>
    <string name="cbs_price">Price: 300/-</string>
    <string name="computer_major_servicing_title">Computer Major Repairing</string>
    <string name="cms_price">Price: 450/-</string>

    <string name="laptop_serving_deptn">Recomended Monthly Servicing for your laptop, Make your laptop run faster and efficient, Includes Internal + External Servicing.</string>
    <string name="laptop_basic_repairing_deptn">Software related problems like Softeware Installation, Driver Installation, Old Pc/Laptop Upgrade, Formatting, Other Software Related Problem</string>
    <string name="laptop_major_repairing_deptn">Hardware related problems like Motherboard repairing,Display Problem, Memory/HardDrive problem,Other hardware related problem</string>
    <string name="computer_servicing_deptn">Recomended Monthly Servicing for your computer, Make your computer run faster and efficient, Includes Internal + External Servicing.</string>
    <string name="computer_basic_servicing_deptn">Software related problems like Softeware Installation, Driver Installation, Old Pc/Laptop Upgrade, Formatting, Other Software Related Problem</string>
    <string name="computer_major_servicing_deptn">Hardware related problems like Motherboard repairing,Display Problem, Memory/HardDrive problem,Other hardware related problem</string>
    <string name="book_btn_text">Book</string>

    <string-array name="nav_items">
        <item>Home</item>>
        <item>My Orders</item>
        <item>Help</item>
        <item>AboutUs</item>
        <item>Log Out</item>
    </string-array>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
