<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appFrontBg"
    tools:context=".Fragments.HelpFragment"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/splash_btm_logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/gp_logo_help"/>

    <TextView
        android:id="@+id/contact_us_text"
        android:layout_below="@id/gp_logo_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="25sp"
        android:textColor="@color/appTitleText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>
    <View
        android:id="@+id/contact_us_line"
        android:layout_below="@id/contact_us_text"
        android:layout_width="115dp"
        android:layout_height="2dp"
        android:background="@color/appBg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/number_text"
        android:layout_below="@id/contact_us_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/number_text"
        android:textSize="23sp"
        android:textColor="@color/appTitleText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/number_value"
        android:layout_below="@id/number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/number_value"
        android:textSize="20sp"
        android:textColor="@color/appTitleText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/email_text"
        android:layout_below="@id/number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email_text"
        android:textSize="23sp"
        android:textColor="@color/appTitleText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/email_value"
        android:layout_below="@id/email_text"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/email_value"
        android:textSize="21sp"
        android:textColor="@color/appTitleText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/website_text"
        android:layout_below="@id/email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/website_text"
        android:textSize="23sp"
        android:textColor="@color/appTitleText"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/website_value"
        android:layout_below="@id/website_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/website_value"
        android:textSize="23sp"
        android:textColorLink="#00B8D4"
        android:textStyle="normal"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>